# torrentrss

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  testconfig.json  testfeed.xml  tests.py
torrentrss/: __init__.py  __main__.py  _torrentrss.py  cli.py  command.py  common.py  config_example.json  config_schema.json  constants.py  episode_number.py  errors.py  feed.py  logger.py  logging.py  loop.py  subscription.py  tests.py  torrentrss.py  utils.py
torrentrss/tests/: conftest.py  test_command.py  test_episode_number.py  test_feed.py  test_subscription.py  test_torrentrss.py  testconfig.json  testfeed.xml  utils.py
